Remove extra solr.xml and other config setup for tests that are not needed (#3988)
Removes unnecessary solr.xml file copying operations during test setup across multiple test classes, simplifying test initialization code.

Removed the unused copyMinFullSetup helper method from SolrTestCaseJ4
Eliminated solr.xml copying from test setup methods across multiple test files
Removed unused helper methods and imports that became redundant after cleanup